--- a/app/css/footer.css
+++ b/app/css/footer.css
@@ -1,26 +1,21 @@
 footer {
-  width: 100%;
-  position: absolute;
-  bottom: 0;
   background-color: #292929;
-  color: #fff;
-  font-size: 0.6em; }
-  footer div div {
-    width: 50%;
-    display: inline-block;
+  padding: 50px 0;
+  color: #fff; }
+  footer .phone-footer {
     text-align: center;
-    float: left;
-    padding: 25px; }
-    footer div div i.fa {
+    margin-bottom: 30px; }
+    footer .phone-footer .fa {
+      background-color: #f4b939;
+      color: #000;
+      height: 50px;
+      width: 50px;
+      font-size: 25px;
+      text-align: center;
+      line-height: 50px;
       display: block;
-      line-height: 2em;
-      background-color: #ecd407;
-      width: 2em;
-      left: 0;
-      right: 0;
-      margin: 0 auto;
-      font-size: 2em;
-      color: #000; }
+      margin: auto;
+      margin-bottom: 10px; }
   footer p {
     text-align: center;
-    margin-bottom: 25px; }
+    font-size: 0.8em; }
