--- a/app/css/style.css
+++ b/app/css/style.css
@@ -4,12 +4,24 @@
 body {
   background-color: #001d8a;
   margin: 0;
-  font-family: "Open Sans", sans-serif;
-  background-image: url(../img/background.png);
-  background-size: cover; }
+  font-family: "Open Sans", sans-serif; }
 
 header, section {
   width: 100%; }
+
+.container {
+  width: 1170px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  height: 100%; }
+
+.yellow {
+  color: #ecd407; }
+
+.col-1-2 {
+  width: 50%;
+  float: left; }
 
 header {
   position: absolute;
@@ -49,52 +61,85 @@ header {
       header #header-contact span.phone {
         font-size: 1.2em; }
 
-div.form {
-  position: absolute;
-  top: 150px;
-  right: 70px;
-  width: 260px;
+.form-section {
+  background-image: url(../img/background.png);
+  background-position: top;
+  background-size: cover;
+  height: 100vh;
   color: #fff; }
-  div.form h3 {
-    margin-top: 0;
-    font-size: 1em; }
-    div.form h3 span {
-      color: #ecd407; }
-  div.form div {
-    background-color: #001d8a;
-    padding: 10px; }
-    div.form div form input {
-      display: block;
-      width: 100%;
-      padding: 5px;
-      margin-bottom: 10px; }
-    div.form div form textarea {
-      width: 100%;
-      padding: 5px; }
+  .form-section .form-section-right {
+    position: absolute;
+    right: 8%;
+    width: 370px;
+    top: 25%; }
+  .form-section #main-form {
+    background-color: #001d8a; }
+    .form-section #main-form fieldset {
+      border-style: none; }
+      .form-section #main-form fieldset input:not([type="submit"]),
+      .form-section #main-form fieldset textarea {
+        padding: 10px;
+        width: 100%;
+        margin-bottom: 10px;
+        font-family: "Open Sans", sans-serif; }
+      .form-section #main-form fieldset input[type="submit"] {
+        padding: 20px;
+        background-color: #ecd407;
+        font-size: 1.2em;
+        font-weight: 700;
+        border: 0px solid #fff;
+        margin-bottom: 10px;
+        transition: all .3s; }
+        .form-section #main-form fieldset input[type="submit"]:hover {
+          background-color: #fff;
+          cursor: pointer; }
 
 footer {
-  width: 100%;
-  position: absolute;
-  bottom: 0;
   background-color: #292929;
-  color: #fff;
-  font-size: 0.6em; }
-  footer div div {
-    width: 50%;
-    display: inline-block;
+  padding: 50px 0;
+  color: #fff; }
+  footer .phone-footer {
     text-align: center;
-    float: left;
-    padding: 25px; }
-    footer div div i.fa {
+    margin-bottom: 30px; }
+    footer .phone-footer .fa {
+      background-color: #f4b939;
+      color: #000;
+      height: 50px;
+      width: 50px;
+      font-size: 25px;
+      text-align: center;
+      line-height: 50px;
       display: block;
-      line-height: 2em;
-      background-color: #ecd407;
-      width: 2em;
-      left: 0;
-      right: 0;
-      margin: 0 auto;
-      font-size: 2em;
-      color: #000; }
+      margin: auto;
+      margin-bottom: 10px; }
   footer p {
     text-align: center;
-    margin-bottom: 25px; }
+    font-size: 0.8em; }
+
+@media (max-width: 1170px) {
+  .container {
+    width: 992px; } }
+
+@media (max-width: 992px) {
+  .container {
+    width: 768px; } }
+
+@media (max-width: 768px) {
+  .container {
+    width: 100%x;
+    padding: 10px; }
+  header #main-logo {
+    display: block;
+    float: none;
+    margin: auto;
+    text-align: center; }
+    header #main-logo .fa {
+      float: none; }
+  header .header-contact {
+    display: none; }
+  .form-section {
+    text-align: center; }
+    .form-section .form-section-right {
+      left: 0;
+      right: 0;
+      margin: 0 auto; } }
