--- a/app/scss/footer.scss
+++ b/app/scss/footer.scss
@@ -1,38 +1,67 @@
 @import "variables";
 @import "mixins";
 
-footer{
-    width: 100%;
-    position: absolute;
-    bottom: 0;
+//footer{
+//    width: 100%;
+//    position: absolute;
+//    bottom: 0;
+//    background-color: $grey-color;
+//    color: #fff;
+//    font-size: 0.6em;
+//    div{
+//        div{
+//            width: 50%;
+//            display: inline-block;
+//            text-align: center;
+//            float: left;
+//            padding: 25px;
+//            i.fa {
+//            display: block;
+//            line-height: 2em;
+//            background-color: $yellow-color;
+//            width: 2em;
+//            left: 0;
+//                right: 0;
+//                margin: 0 auto;
+//                font-size: 2em;
+//                color: #000;
+//                
+//        }
+//        }
+//        
+//        
+//    }
+//    p {
+//            text-align: center;
+//        margin-bottom: 25px;
+//        }
+//}
+
+footer {
     background-color: $grey-color;
+    padding: 50px 0;
     color: #fff;
-    font-size: 0.6em;
-    div{
-        div{
-            width: 50%;
-            display: inline-block;
+    
+    .phone-footer {
+        text-align: center;
+        margin-bottom: 30px;
+        .fa {
+            background-color: #f4b939;
+            color: #000;
+            height: 50px;
+            width: 50px;
+            
+            font-size: 25px;
             text-align: center;
-            float: left;
-            padding: 25px;
-            i.fa {
+            line-height: 50px;
             display: block;
-            line-height: 2em;
-            background-color: $yellow-color;
-            width: 2em;
-            left: 0;
-                right: 0;
-                margin: 0 auto;
-                font-size: 2em;
-                color: #000;
-                
+            margin: auto;
+            margin-bottom: 10px;
         }
-        }
-        
-        
     }
-    p {
-            text-align: center;
-        margin-bottom: 25px;
-        }
+    p{
+        text-align: center;
+        font-size: 0.8em;
+    }
 }
+
